@@ -1,3 +1,8 @@
+2008-09-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* gas/all/gas.exp: Don't run redef tests on a bunch of targets.
+	* gas/elf/elf.exp: Likewise.
+
 2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gas/mips/cfi-n64-1.s, gas/mips/cfi-n64-1.d: New test.
